<resources>
    <string name="app_name">Basketball Score</string>

    <!-- MainActivity -->
    <string name="local_label">Local</string>
    <string name="visitante_label">Visitante</string>
    <string name="reset_desc">Reset del marcador</string>
    <string name="go_to_result">Ir a resultados</string>
    <string name="plus1">+1</string>
    <string name="plus2">+2</string>
    <string name="minus1">-1</string>

    <!-- ScoreActivity -->
    <string name="score_format">%1$d - %2$d</string>
    <string name="result_local_gana">Ganó el equipo Local</string>
    <string name="result_visitante_gana">Ganaron los Visitantes</string>
    <string name="result_empate">Fue un empate</string>

    <!-- Intent keys -->
    <string name="extra_local">EXTRA_LOCAL</string>
    <string name="extra_visitante">EXTRA_VISITANTE</string>
</resources>
